--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "devextreme": "^21.2.4",
+    "devextreme-react": "^21.2.4"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
@@ -28,6 +30,7 @@
     "@types/styled-components": "^5.1.25",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
-    "typescript": "4.6.4"
+    "typescript": "4.6.4",
+    "devextreme-themebuilder": "^21.2.4"
   }
 }
