--- a/package.json
+++ b/package.json
@@ -16,22 +16,23 @@
     "@fontsource/roboto": "^4.5.5",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
+    "axios": "^0.27.2",
+    "devextreme": "^21.2.4",
+    "devextreme-react": "^21.2.4",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-icons": "^4.3.1",
     "react-dom": "18.1.0",
-    "styled-components": "^5.3.5",
-    "devextreme": "^21.2.4",
-    "devextreme-react": "^21.2.4"
+    "react-icons": "^4.3.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.3",
     "@types/styled-components": "^5.1.25",
+    "devextreme-themebuilder": "^21.2.4",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
-    "typescript": "4.6.4",
-    "devextreme-themebuilder": "^21.2.4"
+    "typescript": "4.6.4"
   }
 }
