--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "devextreme": "^21.2.4",
     "devextreme-react": "^21.2.4",
     "next": "12.1.6",
+    "nextjs-cors": "^2.1.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
